--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -17,6 +17,7 @@
     "primereact": "^8.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
