--- a/src/Movies.Api/Movies.Api.csproj
+++ b/src/Movies.Api/Movies.Api.csproj
@@ -9,9 +9,17 @@
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.6" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.1.0" />
+    <PackageReference Include="Microsoft.OData.Core" Version="7.12.0" />
+    <PackageReference Include="Microsoft.AspNet.OData" Version="7.5.15" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
+    <None Remove="AutoMapper" />
+    <None Remove="FluentValidation" />
+    <None Remove="Microsoft.OData.Core" />
+    <None Remove="Microsoft.AspNet.OData" />
   </ItemGroup>
 </Project>
